--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
+alembic==1.16.4
 blinker==1.8.2
 click==8.2.1
 Flask==3.0.3
 Flask-Login==0.6.3
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
+Mako==1.3.10
 MarkupSafe==2.1.5
 mysql-connector-python==9.1.0
 protobuf==5.28.0
